<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/homebtn"
            android:title="@string/escanear" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/watch"
            android:title="@string/verQr" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/qricon"
            android:title="@string/generar" />

    </group>


    <item android:title="@string/information">
        <menu>

            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/patica"
                android:title="@string/petperfil" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/face"
                android:title="@string/userperfil" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/locate"
                android:title="@string/ubicacion" />
        </menu>
    </item>



</menu>
