<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_height="130dp"
    android:layout_marginTop="5dp"
    android:layout_margin="2dp">

    <ImageView
        android:layout_margin="3dp"
        android:id="@+id/fotoMascota"
        android:src="@drawable/patica"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="90dp" />
    
    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/nombremascota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/nombreMascota"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/razaMascota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/raza"
            android:textSize="12dp"
            />
        <TextView
            android:id="@+id/colorMascota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/color"
            android:textSize="12dp"
            />

    </LinearLayout>

</LinearLayout>