<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jesusjavier.myapp.RegistroActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"
                android:id="@+id/eCorreo" />

            <EditText
                android:inputType="textWebPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:hint="@string/contraseña"
                android:id="@+id/eContrasena" />
            <EditText
                android:inputType="textWebPassword"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:hint="@string/repcontraseña"
                android:id="@+id/eRepcontrasena" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:background="@color/colorAccent"
                    android:textColor="@color/black"
                    android:onClick="registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registro"
                    android:id="@+id/eIniciar" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</ScrollView>
